added a paragraph to the home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <h1>Welcome to WDD130 Web Projects</h1>
         <nav>
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
@@ -18,9 +19,10 @@
             <a href="#">Personal Siteplan</a>
 
         </nav>
+        <p>Cru Larson - WDD130</p>
     </header>
     <main>
-        <h1>Cru Larson</h1>
+        
         <img src="sunglasses_pic.jpg" width="450" alt="Picture of Cru with Sunglasses">
 
         <p>I am currently majoring in Cloud Computing and might end up goin toward Technical sales eventually.</p>
