--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         
         <img src="sunglasses_pic.jpg" width="450" alt="Picture of Cru with Sunglasses">
 
-        <p>I am currently majoring in Cloud Computing and might end up goin toward Technical sales eventually.</p>
+        <p>I am currently majoring in Cloud Computing and might end up going toward Technical sales eventually.</p>
         <p>Some hobbies of mine include Choir/singing, video games like World of Warcraft and lots of games with
             friends. Whatever it is I'm always down to try it once!</p>
     </main>
     <footer>
         &copy; 2025 Cru Larson
-        <p>this is footer paragraph</p>
+        <p>this is a footer paragraph</p>
     </footer>
 </body>
 
