--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Welcome to WDD130 Web Projects</h1>
         <nav>
             <a href="wwr/index.html">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="WWR/site-plan-rafting.html">White Water Rafting Siteplan</a>
             <a href="positioning.html">positioning Activity</a>
             <a href="#">Personal Website</a>
             <a href="#">Personal Siteplan</a>
