--- a/WWR/siteplan.html
+++ b/WWR/siteplan.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Stormlight: An Explanation Site Plan</h1>
       <h2>Cru Larson</h2>
-      <h2>WDD 130-[section]</h2>
+      <h2>WDD 130-01</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -58,7 +58,7 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: IM Fell French Canon SC  <!-- change this -->
+        Heading Font: EB Garamond <!-- change this -->
       </h4>
       <h4>
         Paragraph Font: Helvetica  <!-- change this -->
