--- a/WWR/siteplan.html
+++ b/WWR/siteplan.html
@@ -249,19 +249,20 @@ Bondsmiths are generally the heart and soul of the Radiants, the most protected 
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="Stormlight-images/Home-wireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>World Gallery</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        On hover (hopefully) I would like all of the grid images to grow in size to about 2x what is shown, to show more detail in the art.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="Stormlight-images/art-wireframe.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>The Magic</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        the page is quite long and may not be easily visible in the image. Here is the <a href="https://wireframe.cc/7gIcpB">link</a>. It also doesn't show the bottom bit with the footer.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      
+      <img src="Stormlight-images/magic-wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
