--- a/Stormlight/index.html
+++ b/Stormlight/index.html
@@ -26,7 +26,7 @@
     </main>
     <footer>
         <a href="index.html"><img src="Stormlight-images/logo.jpg" alt="logo image"></a>
-        <a href="siteplan.css">Siteplan</a>
+        <a href="siteplan.html">Siteplan</a>
         <p>If you find this interesting please go to Brandon Sanderson's site <a href="https://www.brandonsanderson.com">here</a>. Much of the Knights Radiant explanation was pulled directly from Brandon's website. </p>
     </footer>
     
