--- a/demos/paralax.html
+++ b/demos/paralax.html
@@ -3,13 +3,17 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
 body, html {
   height: 100%;
 }
 
 .parallax {
   /* The image used */
-  background-image: url('/Stormlight/Stormlight-images/wayofkings.jpg');
+  background-image: url('images/wordsofradiance.jpg');
 
   /* Full height */
   height: 100%; 
@@ -22,7 +26,7 @@ body, html {
 }
 .parallax2{
      /* The image used */
-  background-image: url('/Stormlight/Stormlight-images/Roshar-map.jpg');
+  background-image: url('images/Roshar-map.jpg');
 
 /* Full height */
 height: 100%; 
