Magic page finalization

--- a/Stormlight/index.html
+++ b/Stormlight/index.html
@@ -40,7 +40,7 @@
         </div>
         <img id="map" src="Stormlight-images/Roshar-map.jpg" alt="Map of Roshar">
     </main>
-    <footer>
+    <footer class="footer-home">
         
         <a class="logo_link" href="index.html"><img class="logo" src="Stormlight-images/logo.jpg" alt="logo image"></a>
         <a id="site-link" href="siteplan.html">Siteplan</a>
