--- a/Stormlight/magic.html
+++ b/Stormlight/magic.html
@@ -4,21 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stormlight's Magic</title>
-    <a href="index.html"><img src="Stormlight-images/logo.jpg" alt="Stormlight logo"></a>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="gallery.html">World Gallery</a>
-        <a href="magic.html">Magic System</a>
-    </nav>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-<h1>The Magic System: The Knights Radiant</h1>
-<h3>Brandon Sanderson has a wonderful explanation of all of the orders of magic, and I don't think that I can do a
-    better job. <a href="https://www.brandonsanderson.com/blogs/blog/the-ten-orders-of-knights-radiant">HERE</a> is a link to his website to take the Knights Radiant quiz.</h3>
+    <header>
+        <div id="navigation">
+            <div id="logo-box">
+
+                <a class="logo_link" href="index.html"><img class="logo" src="Stormlight-images/logo.jpg"
+                        alt="Stormlight logo"></a>
+            </div>
+
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="gallery.html">World Gallery</a>
+                <a href="magic.html">Magic System</a>
+            </nav>
+        </div>
+    </header>
+    <main id="magic-main">
+<h1 id="magic-h1">The Magic System: The Knights Radiant</h1>
+<h3 id="magic-h3">Brandon Sanderson has a wonderful explanation of all of the orders of magic, and I don't think that I can do a
+    better job. <a class="here-link" href="https://www.brandonsanderson.com/blogs/blog/the-ten-orders-of-knights-radiant">Here</a> is a link to his website to take the Knights Radiant quiz. All of what follows is directly from Brandon Sanderson's website.</h3>
 
     <div>
-        <p>
+        <p class="magic-p">
             In the Stormlight Archive, the Knights Radiant are a group of magic users called Surgebinders, tasked with
             protecting Roshar from the Desolations, events that happen intermittently throughout history when dark forces
             besiege the planet.
@@ -35,8 +45,8 @@
             In the current era on Roshar, radiant spren seek bonds with mortals in order to fight Odium and his forces in what
             some call the True Desolation. The Knights Radiant must stand again!
         </p>
-        <img src="Stormlight-images/windrunner_placard.webp" alt="Windrunner placard">
-<p>
+        <img class="placard" src="Stormlight-images/windrunner_placard.webp" alt="Windrunner placard">
+<p class="magic-p">
     Windrunner oaths are themed toward protection, particularly defending innocents or those who are unable to protect
     themselves.
 
@@ -47,8 +57,8 @@
     brothers and sisters. They often have larger numbers of squires than other Orders and focus more than any other
     Order on mastering their weapons.
 </p>
-    <img src="Stormlight-images/skybreaker_placard.webp" alt="Skybreaker placard">
-<p>
+    <img class="placard" src="Stormlight-images/skybreaker_placard.webp" alt="Skybreaker placard">
+<p class="magic-p">
     Skybreaker oaths are themed toward justice, fighting for causes, and enforcing social rules. They generally
     reinforce the importance of moral codes, legal structures, and similar boundaries that protect civilization.
 
@@ -66,8 +76,8 @@
     over time. Anyone believing in finding true justice, in defending the innocent, and in punishing the guilty would
     be welcome in the Order.
 </p>
-    <img src="Stormlight-images/dustbringer_placard.webp" alt="Dustbringer placard">
-<p>
+    <img class="placard" src="Stormlight-images/dustbringer_placard.webp" alt="Dustbringer placard">
+<p class="magic-p">
     Dustbringer oaths were themed toward responsibility. They were led to understand that the powers they used needed
     to be properly channeled, much as their own desires and wills needed proper form and shape. As a Dustbringer moved
     through the oaths, they were taught greater powers of destruction—and are one of the only orders where their
@@ -90,8 +100,8 @@
       are a little foolhardy at times—brave soldiers who see themselves as containing and controlling terrible
       destruction so it won’t get out of hand and hurt innocents.
 </p>
-    <img src="Stormlight-images/edgedancer_placard.webp" alt="Edgedancer placard">
-<p>
+    <img class="placard" src="Stormlight-images/edgedancer_placard.webp" alt="Edgedancer placard">
+<p class="magic-p">
     Edgedancer oaths are themed around remembering the ordinary people of the world—those who aren’t powerful generals
     or Radiants. Too often, the actions of the powerful have terrible effects on the people with no voice, and the
     Edgedancers consider it their solemn duty to remember that the people are the ones they truly serve.
@@ -109,8 +119,8 @@
     any way base just because they often ignore high society; they are renowned as some of the most refined and
     graceful of Radiants.
 </p>
-    <img src="Stormlight-images/truthwatcher_placard.webp" alt="Truthwatcher placard">
-<p>
+    <img class="placard" src="Stormlight-images/truthwatcher_placard.webp" alt="Truthwatcher placard">
+<p class="magic-p">
     Truthwatcher oaths are themed around seeking to find ultimate truth and sharing it. They are very concerned with
     knowledge and the proper exploitation of it. Note that this should not be confused with the Lightweavers, whose
     oaths are themed toward personal truths about themselves, said for reasons of self-actualization. Truthwatchers
@@ -129,8 +139,8 @@
     hold the knowledge and secrets of Surgebinding and are the ones to discover many of the newer advances in things
     like fabrial technology.
 </p>
-    <img src="Stormlight-images/lightweaver_placard.webp" alt="Lightweaver placard">
-<p>
+    <img class="placard" src="Stormlight-images/lightweaver_placard.webp" alt="Lightweaver placard">
+<p class="magic-p">
     Lightweaver oaths are an oddity, perhaps because their spren tend to be the oddest among all Radiant spren.
     Instead of speaking specific words, or even words along a certain theme, Lightweavers speak truths about
     themselves—things they must admit to themselves in order to progress as people. It is theorized that because
@@ -150,8 +160,8 @@
     strive to make sure that the world doesn’t just live through the Desolations—because mere survival isn’t enough
     unless there is something to live for.
 </p>
-    <img src="Stormlight-images/elsecaller_placard.webp" alt="Elsecaller placard">
-<p>
+    <img class="placard" src="Stormlight-images/elsecaller_placard.webp" alt="Elsecaller placard">
+<p class="magic-p">
     Elsecaller oaths are, like those of the Lightweavers or Skybreakers, themed toward the individual. In this case,
     the theme is progress—becoming better with each oath, seeking to explore their true potential and reach it.
     Because of this, the Order is open to many different types, so long as they want to improve themselves.
@@ -165,8 +175,8 @@
     tacticians, and are logistical geniuses, aided in part by their abilities to create food and water for armies, but
     also their ability to move in and out of Shadesmar.
 </p>
-    <img src="Stormlight-images/willshaper_placard.webp" alt="Willshaper placard">
-<p>
+    <img class="placard" src="Stormlight-images/willshaper_placard.webp" alt="Willshaper placard">
+<p class="magic-p">
     The Willshapers believe strongly that all people should be free to make their own choices. Their oaths are themed
     toward freedom and letting people be free to express themselves and make their own way in life.
 
@@ -184,8 +194,8 @@
     or other essentials. Anywhere you find someone resisting tyranny or oppression, you’ll often find a Willshaper
     cheering them on.
 </p>
-    <img src="Stormlight-images/stoneward_placard.webp" alt="Stoneward placard">
-<p>
+    <img class="placard" src="Stormlight-images/stoneward_placard.webp" alt="Stoneward placard">
+<p class="magic-p">
     Stoneward oaths focus on team dynamics, on learning to work with others, and on being there for those who need
     them. They put the interests of others before their own, and will not bend their Ideals for the sake of
     convenience.
@@ -202,8 +212,8 @@
     situation with few resources and make something better of it. Though not known as inventors or creators, they are
     good at improvising solutions to problems in the moment.
 </p>
-    <img src="Stormlight-images/bondsmith_placard.webp" alt="Bondsmith placard">
-<p>
+    <img class="placard" src="Stormlight-images/bondsmith_placard.webp" alt="Bondsmith placard">
+<p class="magic-p">
     Bondsmith oaths are focused on unity, unification, and bringing others together. However, this is a loose theme,
     as there are so few Bondsmiths—and the three sources of their powers are so different in personality—that the
     oaths can end up taking a variety of different shapes, depending on the situation.
@@ -229,9 +239,12 @@
 
     </main>
     <footer>
-        <a href="index.html"><img src="Stormlight-images/logo.jpg" alt="logo image"></a>
-        <a href="siteplan.html">Siteplan</a>
-        <p>If you find this interesting please go to Brandon Sanderson's site <a href="https://www.brandonsanderson.com">here</a>. Much of the Knights Radiant explanation was pulled directly from Brandon's website. </p>
+        
+        <a class="logo_link" href="index.html"><img class="logo" src="Stormlight-images/logo.jpg" alt="logo image"></a>
+        <a id="site-link" href="siteplan.html">Siteplan</a>
+        <p>If you find this interesting please go to Brandon Sanderson's site <a
+                href="https://www.brandonsanderson.com">here</a>. Much of the Knights Radiant explanation was pulled
+            directly from Brandon's website. </p>
     </footer>
     
 </body>
