--- a/Stormlight/gallery.html
+++ b/Stormlight/gallery.html
@@ -1,39 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stormlight's Majesty</title>
-    <a href="index.html"><img src="Stormlight-images/logo.jpg" alt="Stormlight logo"></a>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="gallery.html">World Gallery</a>
-        <a href="magic.html">Magic System</a>
-    </nav>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <main>
-        
+    <header>
+        <div id="navigation">
+            <div id="logo-box">
+
+                <a class="logo_link" href="index.html"><img class="logo" src="Stormlight-images/logo.jpg"
+                        alt="Stormlight logo"></a>
+            </div>
+
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="gallery.html">World Gallery</a>
+                <a href="magic.html">Magic System</a>
+            </nav>
+        </div>
+    </header>
+    <main id="gallery-main">
+
         <div id="gallery-hero">
-    <section>
-        <h2>Roshar: A World full of Alien Majesty!</h2>
-        <p>Roshar is one of Brandson Sanderson's most alien worlds. One of the biggest things about Roshar that shapes the
-            lives of nearly everyone in the world is the Highstorm. The Highstorm is a massive hurricane that rages across the
-            world from east to west regularly. It is able to be predicted. The entire eastern and central parts of Roshar have
-            no soil. There are only plains of stone and rock. This, of course, has massive affects on the flora and fauna of
-            Roshar.</p>
-            <img src="Stormlight-images/oathbringer.jpg" alt="oathbringer cover art">
-        </section>
-        <section> 
-            <p>There are many illustrations of plantlife in the art gallery. They generally end up in laits created by
-                ledges of stone creating a safer environment to grow because of the protection from the extreme winds of the
-                Highstorm. The fauna is far more interesting, however. Nearly all fauna are crustacean. They have exoskeletons or
-                a hybrid of thick skin and chitin like the axehound in one of the illustrations. The farther west the storm goes
-                the weaker it gets and so it influences those that live there less than those who live in the east.
-            </p>
-            <img src="Stormlight-images/wordsofradiance.jpg" alt="oathbringer cover art">
-        </section>
-    </div>
+            <h2 id="gallery-header">Roshar: A World full of Alien Majesty!</h2>
+        </div>
+            <section id="section-1">
+                <p class="gallery-p">Roshar is one of Brandson Sanderson's most alien worlds. One of the biggest things about Roshar that
+                    shapes the
+                    lives of nearly everyone in the world is the Highstorm. The Highstorm is a massive hurricane that
+                    rages across the
+                    world from east to west regularly. It is able to be predicted. The entire eastern and central parts
+                    of Roshar have
+                    no soil. There are only plains of stone and rock. This, of course, has massive affects on the flora
+                    and fauna of
+                    Roshar.</p>
+                    <img class="gallery-hero-img" src="Stormlight-images/oathbringer.jpg" alt="oathbringer cover art">
+                </section>
+            <section id="section-2">
+                <p class="gallery-p">There are many illustrations of plantlife in the art gallery. They generally end up in laits created
+                    by
+                    ledges of stone creating a safer environment to grow because of the protection from the extreme
+                    winds of the
+                    Highstorm. The fauna is far more interesting, however. Nearly all fauna are crustacean. They have
+                    exoskeletons or
+                    a hybrid of thick skin and chitin like the axehound in one of the illustrations. The farther west
+                    the storm goes
+                    the weaker it gets and so it influences those that live there less than those who live in the east.
+                </p>
+                <img class="gallery-hero-img" src="Stormlight-images/wordsofradiance.jpg" alt="oathbringer cover art">
+            </section>
 
         <div id="gallery-grid">
             <img src="Stormlight-images/Axehound.jpg" alt="image of an Axehound">
@@ -51,10 +71,14 @@
         </div>
     </main>
     <footer>
-        <a href="index.html"><img src="Stormlight-images/logo.jpg" alt="logo image"></a>
-        <a href="siteplan.html">Siteplan</a>
-        <p>If you find this interesting please go to Brandon Sanderson's site <a href="https://www.brandonsanderson.com">here</a>. Much of the Knights Radiant explanation was pulled directly from Brandon's website. </p>
+
+        <a class="logo_link" href="index.html"><img class="logo" src="Stormlight-images/logo.jpg" alt="logo image"></a>
+        <a id="site-link" href="siteplan.html">Siteplan</a>
+        <p>If you find this interesting please go to Brandon Sanderson's site <a
+                href="https://www.brandonsanderson.com">here</a>. Much of the Knights Radiant explanation was pulled
+            directly from Brandon's website. </p>
     </footer>
-    
+
 </body>
+
 </html>
