--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="WWR/index.html">White Water Rafting Website</a>
             <a href="WWR/site-plan-rafting.html">White Water Rafting Siteplan</a>
             <a href="positioning.html">positioning Activity</a>
-            <a href="#">Personal Website</a>
-            <a href="#">Personal Siteplan</a>
+            <a href="https://crularson.github.io/wdd130/Stormlight/">Personal Website</a>
+            <a href="https://crularson.github.io/wdd130/Stormlight/siteplan.html">Personal Siteplan</a>
 
         </nav>
         <p>Cru Larson - WDD130</p>
